tests/ui/hygiene/missing-self-diag.stderr
error[E0424]: expected value, found module `self`
  --> $DIR/missing-self-diag.rs:10:9
   |
LL |           self.bar();
   |           ^^^^ `self` value is a keyword only available in methods with a `self` parameter
...
LL | /     pub fn foo(&self) {
LL | |         call_bar!();
   | |         ----------- in this macro invocation
LL | |     }
   | |_____- this function has a `self` parameter, but a macro invocation can only access identifiers it receives from parameters
   |
   = note: this error originates in the macro `call_bar` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0424`.
